# backtesting

./: .gitignore  pyproject.toml
.kiro/specs/confirmation-indicator-pine-script-mismatch-fix/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/sp500-quantstats-backtest/: .config.kiro  design.md  requirements.md  tasks.md
sp500_backtest/: __init__.py  __main__.py  config.py  config.yaml  main.py
sp500_backtest/data/: fetcher.py
sp500_backtest/engine/: backtest.py  cache.py  checkpoint.py  combination.py  optimizer.py  signal.py
sp500_backtest/indicators/: __init__.py  base.py  confirmation.py  leading.py  utils.py
sp500_backtest/results/: __init__.py  ranker.py  reporter.py
sp500_backtest/tests/: test_backtest_engine.py  test_cache.py  test_checkpoint.py  test_combination_engine.py  test_config.py  test_confirmation_fault_condition.py  test_confirmation_preservation.py  test_data_fetcher.py  test_indicators_base.py  test_main.py  test_optimizer.py  test_ranker.py  test_reporter.py  test_signal_generator.py  test_utils.py
